# ejercicios-2018-octaviodimarco

U00_Repaso/Ej-01/: Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  Geometria.cpp  Geometria.h  Triangulo.cpp  Triangulo.h  main.cpp
U00_Repaso/Ej-02/: Calculadora.h  main.cpp
U00_Repaso/Ej-04/: main.cpp
U00_Repaso/Ej-05/: main.cpp
U01_Recursividad/Ej-01/: main.cpp  potencia.cpp
U01_Recursividad/Ej-02/: main.cpp  sumatoria.cpp
U01_Recursividad/Ej-03/: ackerman.cpp  main.cpp
U01_Recursividad/Ej-04/: main.cpp  mcd.cpp
U01_Recursividad/Ej-05/: digitos.cpp  digitos.h  main.cpp
U02_Listas/: CMakeLists.txt
U02_Listas/Ej-01/: fnInvierte.h  main.cpp
U02_Listas/Ej-02/: main.cpp
U02_Listas/Ej-03/: main.cpp
U02_Listas/Ej-04/: main.cpp  union.h
U03_Pilas/Ej-01/: main.cpp
U03_Pilas/Pila/: Pila.h
