set(SOURCE_FILES_01 Ej-01/main.cpp Lista/Lista.h Ej-01/fnInvierte.h Lista/nodo.cpp ../U03_Pilas/Pila/nodo.h)
add_executable(U02-E01 ${SOURCE_FILES_01} Lista/nodo.cpp ../U03_Pilas/Pila/nodo.h)

set(SOURCE_FILES_02 Ej-02/main.cpp Lista/nodo.cpp ../U03_Pilas/Pila/nodo.h)
add_executable(U02-E02 ${SOURCE_FILES_02} Lista/nodo.cpp ../U03_Pilas/Pila/nodo.h)

set(SOURCE_FILES_03 Ej-03/main.cpp Lista/nodo.cpp ../U03_Pilas/Pila/nodo.h)
add_executable(U02-E03 ${SOURCE_FILES_03} Lista/nodo.cpp ../U03_Pilas/Pila/nodo.h)

set(SOURCE_FILES_04 Ej-04/main.cpp Ej-04/union.h Lista/nodo.cpp ../U03_Pilas/Pila/nodo.h)
add_executable(U02-E04 ${SOURCE_FILES_04} Lista/nodo.cpp ../U03_Pilas/Pila/nodo.h)

set(SOURCE_FILES_05 Ej-05/main.cpp Ej-05/CircList.h Lista/nodo.cpp ../U03_Pilas/Pila/nodo.h)
add_executable(U02-E05 ${SOURCE_FILES_05} Lista/nodo.cpp ../U03_Pilas/Pila/nodo.h)

set(SOURCE_FILES_06 Ej-06/main.cpp Lista/nodo.cpp ../U03_Pilas/Pila/nodo.h)
add_executable(U02-E06  ${SOURCE_FILES_06} Lista/nodo.cpp ../U03_Pilas/Pila/nodo.h)